# easyto-init

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile.build  Makefile  README.md  build.zig  build.zig.zon
.github/workflows/: common.yml  release.yml  test.yml
hack/: bench-qemu
src/: backoff.rs  backoff.zig  constants.rs  constants.zig  container.rs  container.zig  dag.zig  dhcp.rs  fs.rs  fs.zig  init.rs  init.zig  lib.rs  log_level.zig  logger.rs  login.rs  login.zig  main.zig  network.rs  network.zig  nvme-amz.zig  rdev.rs  root.zig  service.rs  service.zig  services.zig  spot.rs  spot.zig  string.zig  system.rs  system.zig  tasks.zig  template.zig  uevent.rs  uevent.zig  vmspec.rs  vmspec.zig  writable.rs  yaml.zig
src/aws/: asm.rs  asm.zig  aws.rs  context.zig  ec2.rs  ec2.zig  imds.rs  mod.rs  s3.rs  s3.zig  ssm.rs  ssm.zig
tests/integration/: run.sh
tests/integration/image/: build.sh  init-wrapper  test-entrypoint
tests/integration/mocks/: imds-server.sh  imds_server.py  test_imds_server.py
tests/integration/scenarios/aws-env-expansion/: config  localstack-setup.sh  user-data.yaml
tests/integration/scenarios/basic-boot/: expected-output  user-data.yaml
tests/integration/scenarios/ebs-volume-btrfs/: config  user-data.yaml
tests/integration/scenarios/ebs-volume-ext4/: config  user-data.yaml
tests/integration/scenarios/env-expansion/: user-data.yaml
tests/integration/scenarios/env-from-imds/: user-data.yaml
tests/integration/scenarios/env-static/: user-data.yaml
tests/integration/scenarios/gzip-userdata/: user-data-setup.sh  user-data-source.yaml
tests/integration/scenarios/hostname/: user-data.yaml
tests/integration/scenarios/iam-credentials/: user-data.yaml
tests/integration/scenarios/init-script-failure/: expected-output  user-data.yaml
tests/integration/scenarios/init-scripts/: user-data.yaml
tests/integration/scenarios/invalid-userdata/: expected-output  user-data.yaml
tests/integration/scenarios/ip-persistence/: user-data.yaml
tests/integration/scenarios/ip-persistence-skip-dhcp/: expected-output  user-data.yaml
tests/integration/scenarios/kernel-modules/: user-data.yaml
tests/integration/scenarios/multi-eni/: config  (+1 more)
(+76 files in other folders)
