[package]
name = "easyto-init"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
base64 = "0.22.1"
blkpg = "0.1.1"
chrono = { default-features = false, version = "0.4.38", features = ["serde", "std"] }
crossbeam = "0.8.4"
gpt = "4.0.0"
log = "0.4.22"
nvme-amz = { version = "0.2.0", features = ["ioctl-rustix"] }
rustix = { default-features = false, version = "0.38.34", features = ["fs", "process", "mount", "runtime", "system", "thread"] }
serde = { default-features = false, version = "1.0.205" }
serde_json = { default-features = false, version = "1.0.122" }
serde-xml-rs = "0.6.0"
serde_yml = "0.0.11"
signal-hook = "0.3.17"
simple_logger = { default-features = false, version = "5.0.0", features = ["timestamps"] }
ureq = "2.10.1"
minaws = { version = "0.1.0" }
k8s-expand = { version = "0.1.0" }

[dev-dependencies]
pretty_assertions = "1"

[[bin]]
name = "init"
path = "src/bin/init.rs"

[profile.release]
codegen-units = 1
lto = true
strip = true
