[package]
name = "easyto-init"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.87"
base64 = "0.22.1"
blkpg = "0.2.0"
chrono = { default-features = false, version = "0.4.38", features = ["serde", "std"] }
crossbeam = "0.8.4"
gpt = "4.0.0"
log = "0.4.22"
nvme-amz = { version = "0.4.0", features = ["ioctl-rustix"] }
rustix = { default-features = false, version = "1.1.2", features = ["fs", "process", "mount", "net", "runtime", "system", "thread"] }
serde = { default-features = false, version = "1.0.205" }
serde_json = { default-features = false, version = "1.0.122", features = ["std"] }
serde-xml-rs = "0.6.0"
serde_yaml2 = "0.1.3"
signal-hook = "0.3.17"
k8s-expand = { version = "0.1.0" }
aws-config = "1.8.12"
aws-sdk-ec2 = "1.198.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "net", "time"] }
aws-sdk-sts = "1.95.0"
aws-sdk-s3 = "1.118.0"
aws-sdk-ssm = "1.101.0"
aws-sdk-secretsmanager = "1.97.0"
once_cell = "1.21.3"

[dev-dependencies]
pretty_assertions = "1"

[[bin]]
name = "init"
path = "src/bin/init.rs"

[profile.release]
codegen-units = 1
lto = true
strip = true
